styles.css
html {
  font-size: 15px;
}

/* Style the Body */
body  {
  font-family: Source Sans Pro;
  margin: 0;
  background-color: #ddd;
  color: #451b16;
  padding: 2rem;
}

h1  {
  font-size: 2rem;
  font-weight: bold;
}

/* Center the Banner image */
.custom-banner {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1rem;
  margin-bottom: 1rem;
  width: 80%;
}

/* Navbar styles */
.navbar-custom {
  background-color: #451b16;
  font-weight: bold;
}

.nav-link {
  color: #f2f2f2;
}

.nav-link:active, .nav-link:hover {
  background-color: #f2f2f2;
  color: #451b16;
  font-weight: 900;
}

/* Override bootstrap navbar color */
.navbar-custom .navbar-brand,.navbar-custom .navbar-text {
  color: #f2f2f2;
}

.custom-toggler.navbar-toggler {
  border-color: #f2f2f2;
  margin: 0.5rem;
  position: relative;
}

/* Restyle hamburger */
.custom-toggler .navbar-toggler-icon {
  position: relative;
  display: inline-block;
  width: 0.5rem;
  height: 0.5rem;
  vertical-align: middle;
  content: "";
  background-image: url(
"data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(242, 242, 242, 242)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

/* Styling for the Section Titles */
.custom-section-title  {
  background-color: #f2f2f2;
  margin-top: 1rem;
  margin-bottom: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
  font-size: 1.25rem;
  font-weight: bold;
}

/* Styling for the i-frame Vimeo video */
.container-iframe {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */

}

/* Responsive style to fit the iframe in the container div with full height and width */
.responsive-iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

/* Styling for the Facebook Follow Us in Footer */
.custom-facebook {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1rem;
  margin-bottom: 1rem;
  width: 20%;
}

